2003-03-28  Bruno Haible  <bruno@clisp.org>

	* copy-file.h: New file, from GNU gettext.
	* copy-file.c: New file, from GNU gettext.

2003-03-18  Jim Meyering  <jim@meyering.net>

	* quote.c (quote_n): Fix typo in comment.

2003-03-14  Jim Meyering  <jim@meyering.net>

	Merge changes from Coreutils.
	* obstack.h (obstack_object_size): Declare temporary, __o,
	to be const, in order to avoid warnings.
	(obstack_room): Likewise.
	(obstack_empty_p): Likewise.

2003-03-13  Paul Eggert  <eggert@twinsun.com>

	Merge changes from Bison.
	* obstack.h: (__INT_TO_PTR) [__STDC__]: Cast result to
	(void *) to avoid diagnostic with native c89 on SGI IRIX 6.5
	when compiling Bison 1.875's `bitset bset = obstack_alloc
	(bobstack, bytes);'.  Problem reported by Nelson H. F. Beebe.
	* hash.c: Include <stdbool.h> unconditionally.

2003-03-09  Paul Eggert  <eggert@twinsun.com>

	* argmatch.c (EXIT_FAILURE): Define if the system doesn't.
	Reported by Bruce Becker; see:
	http://mail.gnu.org/archive/html/bug-bison/2003-03/msg00017.html

2003-03-03  Paul Eggert  <eggert@twinsun.com>
            Bruno Haible  <bruno@clisp.org>

	* mbswidth.h: Include <wchar.h>. Needed for UnixWare 7.1.1.
	Reported by John Hughes, see
	http://mail.gnu.org/archive/html/bug-bison/2003-02/msg00030.html

2003-02-19  Paolo Bonzino  <bonzini@gnu.org>

	* poll_.h: New file.
	* poll.c: New file.

2003-02-18  Paolo Bonzino  <bonzini@gnu.org>

	* mathl.h: New file.
	* acosl.c: New file.
	* asinl.c: New file.
	* atanl.c: New file.
	* ceill.c: New file.
	* cosl.c: New file.
	* expl.c: New file.
	* floorl.c: New file.
	* frexpl.c: New file.
	* ldexpl.c: New file.
	* logl.c: New file.
	* sincosl.c: New file.
	* sinl.c: New file.
	* sqrtl.c: New file.
	* tanl.c: New file.
	* trigl.c: New file.
	* trigl.h: New file.

2003-02-17  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.h: New file, from GNU gettext.
	* mkdtemp.c: New file, from GNU gettext.

2003-01-31  Bruno Haible  <bruno@clisp.org>
