@@ -108,8 +108,10 @@ copy_file_preserving (const char *src_filename, const char *dest_filename)
   }
 #endif
 
+#if HAVE_CHOWN
   /* Preserve the owner and group.  */
   chown (dest_filename, statbuf.st_uid, statbuf.st_gid);
+#endif
 
   /* Preserve the access permissions.  */
   chmod (dest_filename, mode);
